compiler/tests/should-fail/MalformedProtocolAnnotation.via
/* MalformedProtocolAnnotationError */

host alice

fun main() {
    val x:int@Replication(hosts = {alice}) = 5;
}
